--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset: "UTF-8">
+  <meta charset:"UTF-8">
   <title> Sam Funk </title>
+  <link rel="stylesheet" type="text/css" href="style.css">
  </head>
  
  <body>
   <h1>My Page!</h1>
+
+  <h2>Currently Under Construction</h2>
  </body>
  </html>
