pasted code from portfolio repository

--- a/index.html
+++ b/index.html
@@ -1,15 +1,76 @@
-<!DOCTYPE HTML>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en-us" class= "h-100">
 
 <head>
-  <meta charset:"UTF-8">
-  <title> Sam Funk </title>
-  <link rel="stylesheet" type="text/css" href="style.css">
- </head>
- 
- <body>
-  <h1>My Page!</h1>
 
-  <h2>Currently Under Construction</h2>
- </body>
- </html>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Samantha Funk</title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <linK rel="stylesheet" href="./assets/style.css">
+
+</head>
+
+<body class = "bg h-100 w-responsive">
+  <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand badge-info text-white " href="#">Samantha Funk</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./contact.html">Contact</a>
+              </li>
+              </ul>
+        </div>
+      </nav>
+
+      <!-- Main content section -->
+      <main class = "container-fluid-sm mw-sm-50 mt-5 mr-sm-5 p-5 ml-sm-5 float-md-left bg-white">
+         <div class = "row mw-75">
+                <section class = "col-12">
+                     <header class = "page-header">
+                        <h1 class = "text-info pb-3 border-bottom border-info">About Me</h1>
+                     </header>
+                      <div class = "row mw-75 mt-3">
+                         <div class = "col-12">
+                            <img class= "float-left img-fluid mr-3 mb-3" id="bio-image" src="https://media-exp1.licdn.com/dms/image/C4D03AQGwDX0MureHTg/profile-displayphoto-shrink_100_100/0?e=1610582400&v=beta&t=2yf9a2GFCSIfTzkmy0pJX7xQzTQZ_jmUAgeI0FYKauI" alt="Sam Funk">
+                            <p>I am working as a Conversation Designer implementing Interactive Voice Virtual Assistants. I have strong background in the full software development life cycle,  from requirements to full implementation. I am also pursuing my true passion: learning to code. My portfolio is fairly empty at the moment, but just wait…  I  have a whole page of projects coming soon!</p>
+                        </div>
+                       </div>
+                       <div class = "row mw-75">
+                        <div class = "col-12">
+                            <p> I live in Indianapolis, IN with my family and our four corgis. Send me a note or check me out on social media:</p>
+                          <!-- links to social media -->
+                            <ul>
+                                <li> <a href= http://www.linkedin.com/in/samantha-funk-99346b157>LinkedIn</a></li>
+                                <li> <a href= http://www.github.com/sfunk11>GitHub</a> </li>
+                            </ul>
+                        </div>
+                      </div>
+                 </section>
+      
+           </div>
+
+      </main>
+      <!-- Footer with Copyright message -->
+        <footer class="bottom-footer border-top border-info fixed-bottom font-small bg-dark">
+            <p class="footer-copyright text-center text-secondary" >© 2020 Copyright: TBD </p>
+        </footer>
+
+<!-- Javascript to enable BootStrap collapsing menu components -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    </body>
+
+</html>
