removed contact form and added Contact section to index page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,32 @@
       
            </div>
 
+           <main class = "container-fluid-sm mw-sm-50 mt-5 mr-sm-5 p-5 ml-sm-5 float-md-left bg-white">
+            <div class = "row mw-75">
+                   <section class = "col-12">
+                        <header class = "page-header">
+                           <h1 class = "text-info pb-3 border-bottom border-info">About Me</h1>
+                        </header>
+                         <div class = "row mw-75 mt-3">
+                            <div class = "col-12">
+                               <img class= "float-left img-fluid mr-3 mb-3" id="bio-image" src="https://media-exp1.licdn.com/dms/image/C4D03AQGwDX0MureHTg/profile-displayphoto-shrink_100_100/0?e=1610582400&v=beta&t=2yf9a2GFCSIfTzkmy0pJX7xQzTQZ_jmUAgeI0FYKauI" alt="Sam Funk">
+                               <p>I am working as a Conversation Designer implementing Interactive Voice Virtual Assistants. I have strong background in the full software development life cycle,  from requirements to full implementation. I am also pursuing my true passion: learning to code. My portfolio is fairly empty at the moment, but just wait…  I  have a whole page of projects coming soon!</p>
+                           </div>
+                          </div>
+                          <div class = "row mw-75">
+                           <div class = "col-12">
+                               <p> I live in Indianapolis, IN with my family and our four corgis. Send me a note or check me out on social media:</p>
+                             <!-- links to social media -->
+                               <ul>
+                                   <li> <a href= http://www.linkedin.com/in/samantha-funk-99346b157>LinkedIn</a></li>
+                                   <li> <a href= http://www.github.com/sfunk11>GitHub</a> </li>
+                               </ul>
+                           </div>
+                         </div>
+                    </section>
+         
+              </div>
+
       </main>
       <!-- Footer with Copyright message -->
         <footer class="bottom-footer border-top border-info fixed-bottom font-small bg-dark">
