added day planner to portfolio page

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                       <div class = "row mw-75 mt-3">
                          <div class = "col-12">
                             <img class= "float-left img-fluid mr-3 mb-3" id="bio-image" src="https://media-exp1.licdn.com/dms/image/C4D03AQGwDX0MureHTg/profile-displayphoto-shrink_100_100/0?e=1610582400&v=beta&t=2yf9a2GFCSIfTzkmy0pJX7xQzTQZ_jmUAgeI0FYKauI" alt="Sam Funk">
-                            <p>I am working as a Conversation Designer implementing Interactive Voice Virtual Assistants. I have strong background in the full software development life cycle,  from requirements to full implementation. I am also pursuing my true passion: learning to code. My portfolio is fairly empty at the moment, but just wait…  I  have a whole page of projects coming soon!</p>
+                            <p>I am working as a Senior Conversation Designer implementing Interactive Voice Virtual Assistants. I have strong background in the full software development life cycle,  from requirements to full implementation. I am also pursuing my true passion: learning to code. My portfolio is still small, but growing every week!  Check back frequently to see the newer things I have been up to.</p>
                         </div>
                        </div>
                        <div class = "row mw-75">
                         <div class = "col-12">
-                            <p> I live in Indianapolis, IN with my family and our four corgis. Send me a note or check me out on social media:</p>
+                            <p> I live in Indianapolis, IN with my family and our four corgis. Send me a note or check me out on social media!</p>
                         </div>
                         <div class = "row mw-75">
                           <div class = "col-12">
