--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
         <div class = "row ">
            <div class = "col-sm-6 pt-4">
             <a href = "https://sfunk11.github.io/recipes4me/"> 
-            <img class = "img-fluid" src="./images/recipes4me.png" alt="Recipes4Me" > 
+            <img class = "img-fluid" src="./assets/images/recipes4me.png" alt="Recipes4Me" > 
             </a>
             <h4 class = "text-center text-info pt-3">Recipes4Me</h4>
             <p class = "text-center text-info"> Personal cookbook page where you can collect all of your favorite online recipes into a single place.</p>
@@ -50,11 +50,12 @@
             
             </div>
              <div class = "col-sm-6 pt-4">
-                 <a href= "./index.html">
-                <img class = "img-fluid" src="https://flyclipart.com/thumb2/free-cartoon-rocket-ship-clip-art-free-rocket-clipart-free-rocket-247317.png" alt="About Me Site Link">
+                 <a href= "https://sfunk11.github.io/day-planner/">
+                <img class = "img-fluid" src="./assets/images/day-planner.png" alt="Day Planner Screenshot">
                 </a>
-                <h4 class = "text-info text-center pt-3">Personal Site (This one!)</h4>
-                <a href = "https://github.com/sfunk11/portfolio-site">Repository Link</a>
+                <h4 class = "text-info text-center pt-3">Sam's Day Planner</h4>
+                <p class = "text-center text-info"> Simple calendar app to plan your daily activities.</p>
+                <a href = "https://github.com/sfunk11/day-planner.png">Repository Link</a>
             </div>
         </div>
         <div class ="row">
