added weather dashboard to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,10 +60,11 @@
         </div>
         <div class ="row">
             <div class = "col-sm-6 pt-4">
-               <a href = "https://sfunk11.github.io/refactor-HW1/">
-                <img class = "img-fluid" src="https://banner2.cleanpng.com/20190404/gzt/kisspng-christian-clip-art-robot-portable-network-graphics-broken-robot-transparent-amp-png-clipart-free-do-5ca6cd4fa41139.299086191554435407672.jpg" alt="Refactor Code Project">
+               <a href = "https://sfunk11.github.io/weather-dashboard/">
+                <img class = "img-fluid" src="./assets/images/weather-dashboard.png" alt="Weather Dashboard Screenshot">
                 </a>
-                <h4 class = "text-center text-info pt-3">Code Refactor Project</h4>
+                <h4 class = "text-center text-info pt-3">Weather Dashboard</h4>
+                <p class = "text-center text-info"> A Webapp that allows you to check the current weather and 5 day forecast for cities around the world.</p>
                 <a href = "https://github.com/sfunk11/refactor-HW1">Repository Link</a>
             </div>
             <div class = "col-sm-6 pt-4">
@@ -73,14 +74,7 @@
                 <h4 class = "text-center text-info pt-3">Random Password Generator</h4>
                 <a href = "https://github.com/sfunk11/password-generator">Repository Link</a>
             </div>
-        <div class ="row ">
-            <div class = "col-sm-6 pt-4 pb-4">
-                <img class = "img-fluid" src="https://image.freepik.com/free-vector/coming-soon-shop-announcement-vector_53876-57828.jpg" alt="Project Coming Soon">
-            </div>
-            <div class = "col-sm-6 pt-4 pb-4">
-
-            </div>
-        </div>
+     
     </main>
        
      <!-- Footer with Copyright info -->
