Added mailto link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                            </header>
                           <!-- links to social media -->
                             <ul>
-                                <li> <a href = "#">borley1@gmail.com</a></li>
+                                <li> <a href = "mailto:borley1@gmail.com">Email Me</a></li>
                                 <li> <a href= https://www.linkedin.com/in/samantha-funk-99346b157>LinkedIn</a></li>
                                 <li> <a href= https://www.github.com/sfunk11>GitHub</a> </li>
                                 <li> <a href = "#"> Link to Resume</a></li>
