added resume and linked it to index

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <li> <a href = "mailto:borley1@gmail.com">Email Me</a></li>
                                 <li> <a href= https://www.linkedin.com/in/samantha-funk-99346b157>LinkedIn</a></li>
                                 <li> <a href= https://www.github.com/sfunk11>GitHub</a> </li>
-                                <li> <a href = "#"> Link to Resume</a></li>
+                                <li> <a href = "./assets/resume-1-8-21.pdf"> Link to Resume</a></li>
                                 
                             </ul>
                         </div>
