--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                       <div class = "row mw-75 mt-3">
                          <div class = "col-12">
                             <img class= "float-left img-fluid mr-3 mb-3" id="bio-image" src="https://media-exp1.licdn.com/dms/image/C4D03AQGwDX0MureHTg/profile-displayphoto-shrink_100_100/0?e=1610582400&v=beta&t=2yf9a2GFCSIfTzkmy0pJX7xQzTQZ_jmUAgeI0FYKauI" alt="Sam Funk">
-                            <p>I am working as a Senior Conversation Designer implementing Interactive Voice Virtual Assistants. I have strong background in the full software development life cycle,  from requirements to full implementation. I am also pursuing my true passion: learning to code. My portfolio is still small, but growing every week!  Check back frequently to see the newer things I have been up to.</p>
+                            <p> Fresh Web Developer with years of experience managing relationship and internal cross functional program for Fortune 500 client. Experienced with both optimizing caller experience design and technical design considerations. Consistent history of guiding teams through difficult challenges, serving as a trusted client advisor, and maintaining high quality standards. I live in Indianapolis, IN with my family and our four corgis.</p>
                         </div>
                        </div>
                        <div class = "row mw-75">
                         <div class = "col-12">
-                            <p> I live in Indianapolis, IN with my family and our four corgis. Send me a note or check me out on social media!</p>
+                            <p>My portfolio is still small, but growing every week!  Check back frequently to see the newer things I have been up to. Send me a note or check me out on social media!</p>
                         </div>
                         <div class = "row mw-75">
                           <div class = "col-12">
