updated about me page

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                         <div class = "row mw-75">
                           <div class = "col-12">
                             <header class = "page-header">
-                              <h1 class = "text-info pb-3 border-bottom border-info">Contact Me:</h1>
+                              <h1 class = "text-info pb-3 border-bottom border-info">Contact:</h1>
                            </header>
                           <!-- links to social media -->
                             <ul>
-                                <li> <a href = "mailto:borley1@gmail.com">Email Me</a></li>
+                                <li> <a href = "mailto:borley1@gmail.com">Email</a></li>
                                 <li> <a href= https://www.linkedin.com/in/samantha-funk-99346b157>LinkedIn</a></li>
                                 <li> <a href= https://www.github.com/sfunk11>GitHub</a> </li>
-                                <li> <a href = "./assets/resume-1-8-21.pdf"> Link to Resume</a></li>
+                                <li> <a href = "./assets/resume-1-8-21.pdf"> Resume</a></li>
                                 
                             </ul>
                         </div>
