Adding burger project to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,12 +77,12 @@
         
             <div class = "col-sm-6 pt-4">
              <div class = "card border-info">
-                 <h4 class = "text-center card-header text-info pt-3">Random Password Generator</h4>
-                 <p class = "text-center card-body text-info">A webapp that will generate a random password sequence using the criteria of your choice.</p>
-                 <a href = "https://sfunk11.github.io/password-generator/">
-                    <img class = "card-img-bottom" src="./assets/images/password-generator.png" alt= "Screenshot of Password Generator">
+                 <h4 class = "text-center card-header text-info pt-3">Eat the Burger</h4>
+                 <p class = "text-center card-body text-info">A full stack logging application that adds and updates to a DB.</p>
+                 <a href = "https://agile-tundra-72704.herokuapp.com">
+                    <img class = "card-img-bottom" src=".assets/images/burger-screenshot.png" alt= "Screenshot of Eat the Burger">
                  </a>
-                 <a href = "https://github.com/sfunk11/password-generator">Repository Link</a>
+                 <a href = "https://github.com/sfunk11/burger">Repository Link</a>
              </div>
             </div>
         </div>
