updated to add Knowvid-19 project info

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,6 +51,18 @@
              </div>
             </div>
             
+            <div class = "row ">
+                <div class = "col-sm-6 pt-4">
+                  <div class = "card border-info">
+                      <h4 class = "text-center card-header text-info pt-3">Knowvid-19</h4>
+                      <p class = "text-center card-body text-info"> One Stop shop for COVID-19 information, including Case and Vaccine statistics and searching for testing locations.</p>
+                      <a href = "https://knowvid-19.herokuapp.com/"> 
+                          <img class = "card-img-bottom" src="./assets/images/knowvid-19.png" alt="Knowvid-19" > 
+                     </a>
+                      <a href = "https://github.com/Smart-Kids-Group/Covid-Project/">Repository Link</a>
+                  </div>
+                 </div>
+
             <div class = "col-sm-6 pt-4">
              <div class = "card border-info">
                  <h4 class = "text-center card-header text-info pt-3">Weather Dashboard</h4>
