small changes to index page

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                       <div class = "row mw-75 mt-3">
                          <div class = "col-12">
                             <img class= "float-left img-fluid mr-3 mb-3" id="bio-image" src="https://media-exp1.licdn.com/dms/image/C4D03AQGwDX0MureHTg/profile-displayphoto-shrink_200_200/0/1536061001183?e=1616630400&v=beta&t=XgQldrhWAr-TkZ2G01jmIrEyK-Q-UubsEMaHbQ2LPLU" alt="Sam Funk">
-                            <p> Fresh Web Developer with years of experience managing relationship and internal cross functional program for Fortune 500 client. Experienced with both optimizing caller experience design and technical design considerations. Consistent history of guiding teams through difficult challenges, serving as a trusted client advisor, and maintaining high quality standards. I live in Indianapolis, IN with my family and our four corgis.</p>
+                            <p> Web Developer with years of experience managing relationship and internal cross functional program for Fortune 500 client. Experienced with both optimizing caller experience design and technical design considerations. Consistent history of guiding teams through difficult challenges, serving as a trusted client advisor, and maintaining high quality standards. I live in Indianapolis, IN with my family and our four corgis.</p>
                         </div>
                        </div>
                        <div class = "row mw-75">
                         <div class = "col-12">
-                            <p>My portfolio is still small, but growing every week!  Check back frequently to see the newer things I have been up to. Send me a note or check me out on social media!</p>
+                            <p>My portfolio is growing every week!  Check back frequently to see the newer things I have been up to. Send me a note or check me out on social media!</p>
                         </div>
                         <div class = "row mw-75">
                           <div class = "col-12">
@@ -56,9 +56,9 @@
                            </header>
                           <!-- links to social media -->
                             <ul>
-                                <li> <a href = "mailto:borley1@gmail.com">Email</a></li>
-                                <li> <a href= https://www.linkedin.com/in/samantha-funk-99346b157>LinkedIn</a></li>
-                                <li> <a href= https://www.github.com/sfunk11>GitHub</a> </li>
+                                <li> <a href = "mailto:borley1@gmail.com">borley1@gmail.com</a></li>
+                                <li> <a href= https://www.linkedin.com/in/samantha-funk-99346b157>https://www.linkedin.com/in/samantha-funk-99346b157</a></li>
+                                <li> <a href= https://www.github.com/sfunk11>https://www.github.com/sfunk11></a> </li>
                                 <li> <a href = "./assets/resume-1-8-21.pdf"> Resume</a></li>
                                 
                             </ul>
@@ -73,7 +73,7 @@
       </main>
       <!-- Footer with Copyright message -->
         <footer class="bottom-footer border-top border-info fixed-bottom font-small bg-dark">
-            <p class="footer-copyright text-center text-secondary" >© 2020 Copyright: TBD </p>
+            <p class="footer-copyright text-center text-secondary" >© 2021 Copyright: TBD </p>
         </footer>
 
 <!-- Javascript to enable BootStrap collapsing menu components -->
